fix: Add Xcode setup to Auto Release job for Swift 6 support
The Auto Release job was failing because it was using system Swift 5.10
instead of Swift 6.0. Add Xcode setup step to ensure Swift 6 is available
for building release artifacts.

- Add Setup Xcode step before Node.js setup in Auto Release job
- Uses latest-stable Xcode version matching build job

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -237,6 +237,11 @@ jobs:
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Setup Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
+
     - name: Setup Node.js for Claude API
       uses: actions/setup-node@v4
       with:
