--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,11 @@ jobs:
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
+    
+    - name: Install p7zip
+      run: |
+        brew install p7zip
+        which 7z || echo "7z not found"
 
     - name: Cache Swift Package Manager
       uses: actions/cache@v4
