fix: Disable parallel test execution in CI
- Remove --parallel flag from swift test in CI/CD pipeline
- This should fix the signal 5 crashes that occur during parallel test execution
- Tests will run sequentially which is more stable in CI environment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Run Tests with Coverage
       run: |
         # Run tests with code coverage (using release mode for consistency with local development)
-        swift test --configuration release --enable-code-coverage --parallel
+        swift test --configuration release --enable-code-coverage
         
         # Detect architecture
         ARCH=$(uname -m)
